--- a/index.html
+++ b/index.html
@@ -3,69 +3,106 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Producto</title>
+  <title>Página Móvil</title>
   <style>
     body {
-      font-family: Arial, sans-serif;
-      margin: 0;
-      padding: 0;
-      background-color: #fff; /* Color de fondo blanco */
+      font-family: 'Courier New', Courier, monospace; /* Fuente Courier New para el cuerpo */
+      background-color: #ffffff; /* Fondo blanco */
+      color: #000000; /* Texto negro */
+      margin: 0; /* Eliminar margen predeterminado del cuerpo */
+      padding: 0; /* Eliminar relleno predeterminado del cuerpo */
+      display: flex;
+      justify-content: center; /* Centrar contenido horizontalmente */
+      align-items: center; /* Centrar contenido verticalmente */
+      height: 100vh; /* Altura del viewport */
     }
     .container {
-      max-width: 400px;
-      margin: 20px auto;
-      padding: 20px;
-      border: 1px solid #000; /* Borde negro */
+      width: 90%; /* Ancho del 90% de la pantalla */
+      max-width: 400px; /* Ancho máximo */
+      border: 2px solid #000000; /* Borde negro */
       border-radius: 10px; /* Bordes redondeados */
-      background-color: #000; /* Color de fondo negro */
-      color: #fff; /* Color del texto blanco */
+      padding: 20px;
     }
-    .product-img {
-      max-width: 100%;
-      height: auto;
+    .section {
+      margin-bottom: 20px;
+      border-bottom: 1px solid #000000; /* Línea negra inferior */
+      cursor: pointer; /* Cambiar cursor al señalar */
     }
-    .product-info {
-      margin-top: 20px;
+    .hidden-info {
+      display: none;
     }
-    @media screen and (max-width: 400px) {
-      .container {
-        width: 100%;
-        border-radius: 0; /* Bordes redondeados */
-        border-top-left-radius: 10px; /* Bordes redondeados */
-        border-top-right-radius: 10px; /* Bordes redondeados */
-        border-bottom-left-radius: 0; /* Bordes redondeados */
-        border-bottom-right-radius: 0; /* Bordes redondeados */
-      }
+    h2 {
+      font-family: Monaco, monospace; /* Fuente Monaco para títulos */
+    }
+    .section:last-child {
+      border-bottom: none; /* Eliminar línea inferior de la última sección */
+    }
+    .right-align {
+      text-align: right; /* Alinear texto a la derecha */
+      max-width: calc(100% - 40px); /* Ajustar ancho para evitar desbordamiento */
     }
   </style>
 </head>
 <body>
-  <div class="container" ng-app="productApp" ng-controller="productController">
-    <h1>{{product.name}}</h1>
-    <img class="product-img" src="{{product.image}}" alt="{{product.name}}">
-    <div class="product-info">
-      <p><strong>Descripción:</strong> {{product.description}}</p>
-      <p><strong>Precio:</strong> {{product.price | currency}}</p>
-      <p><strong>Materiales:</strong> {{product.materials}}</p>
-      <p><strong>Elaboración:</strong> {{product.elaboration}}</p>
+
+  <div class="container">
+    <div class="section" onclick="toggleInfo('info1')">
+      <!-- Centrar la imagen y ajustarla al tamaño del div padre -->
+      <img src="images/giphy.gif" alt="Foto del item" style="display: block; margin: 0 auto; max-width: 100%;">
+      <h2>Item</h2>
+      
+      <div id="info1" class="hidden-info">
+        <p>NAME OF THE ITEM</p>
+        <p>Description of the item Description of the item Description of the item Description of the item Description of the item Description of the item Description of the item Description of the item Description of the item Description of the item Description of the item Description of the item</p>
+      </div>
+    </div>
+
+    <div class="section" onclick="toggleInfo('info2')">
+      <h2>Product code</h2>
+      <div id="info2" class="hidden-info">
+        <p>M-0001010</p>
+        <p>Uploaded on the blockchain: 21/03/2024</p>
+        <!-- ajustar el tamaño del texto para evitar desbordamiento -->
+        <p>Blockchain transaction ID <b>44e25bc0ed840f9bf0e58d6227db15192d 5b89e79ba4304da16b09703f68ceaf</b></p>
+      </div>
+    </div>
+
+    <div class="section" onclick="toggleInfo('info3')">
+      <h2>Materials</h2>
+      <div id="info3" class="hidden-info">
+        <p>Fabric: 80% Ahimsa Silk, 20% Polyester.</p>
+        <p>Lining: 100% Ahimsa Silk.</p>
+      </div>
+    </div>
+
+    <div class="section" onclick="toggleInfo('info4')">
+      <h2>Care instructions</h2>
+      <div id="info4" class="hidden-info">
+        <p>Do Not Wash</p>
+        <p>Do Not Bleach</p>
+        <p>Iron Max 110 º C</p>
+        <p>Do Not Tumble Dry</p>
+        <p>Dry Clean with Tetracloroethylene</p>
+      </div>
+    </div>
+
+    <div class="section" onclick="toggleInfo('info5')">
+      <h2>Why do I need a Blockchain Passport?</h2>
+      <div id="info5" class="hidden-info">
+        <p>Bla blabla Bla blablá Bla blabla Bla blablá Bla blabla Bla blablá Bla blabla Bla blablá Bla blabla Bla blablá Bla blabla Bla blablá Bla blabla Bla blablá Bla blabla Bla blablá Bla blabla Bla blablá Bla blabla</p>
+      </div>
     </div>
   </div>
 
-  <!-- AngularJS CDN -->
-  <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.8.2/angular.min.js"></script>
   <script>
-    var app = angular.module('productApp', []);
-
-    app.controller('productController', function($scope) {
-      $scope.product = {
-        name: 'Producto Ejemplo',
-        image: 'ruta/imagen.jpg',
-        description: 'Esta es una descripción del producto.',
-        price: 50.99,
-        materials: 'Material 1, Material 2, Material 3',
-        elaboration: 'Este es el proceso de elaboración del producto.'
-      };
-    });
+  function toggleInfo(id) {
+    var info = document.getElementById(id);
+    if (info.style.display === "none" || info.style.display === "") {
+      info.style.display = "block"; // Si está oculto, lo muestra
+    } else {
+      info.style.display = "none"; // Si está visible, lo oculta
+    }
+  }
   </script>
 </body>
 </html>
